# aotinductor-rs

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
csrc/: aoti.cc  aoti.h
scripts/: download_libtorch.sh
src/: aoti.rs  lib.rs
tests/: ep1.pt2  ep2.pt2  model_package_load.rs
