[package]
authors = ["Jiasen Wu <jiasenwu@hotmail.com>"]
name = "aotinductor"
version = "0.1.2"
edition = "2021"
build = "build.rs"
license-file = "LICENSE"
repository = "https://github.com/pierric/aotinductor-rs"
readme = "README.md"
categories = ["science"]
keywords = ["pytorch", "deep-learning", "machine-learning"]
description = "Rust wrappers for the PyTorch AOTInductor api."

[build-dependencies]
cxx-build = "1.0.137"

[dependencies]
cxx = "1.0.137"
tch = "^0.19.0"
torch-sys = "^0.19.0"

[features]
doc-only = ["tch/doc-only", "torch-sys/doc-only"]

[package.metadata.docs.rs]
features = ["doc-only"]
